@@ -1,4 +1,5 @@
 [CW6]
+* SyncProxyAndroid SDK: Update PRNDL enum's values from the spec.
 * SyncProxyAndroid SDK: Fix session id at application resumption.
 + SyncProxyAndroid SDK: Allow to send requests with unknown function names.
 + SyncProxyAndroid SDK: Implement integration of OnSystemRequest notification and system PutFile request.
